<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_control"
	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/bg_control">
            <!--<Spinner
            	android:id="@+id/spinner"
            	android:layout_width="45dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="13dp"
		        android:background="@null"
		        android:gravity="center_vertical"
		        android:prompt="@string/promt"/>  -->
		    <ImageButton 
            	android:id="@+id/bt_select"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="23dp"
		        android:src="@drawable/btn_select"
		        android:background="@null"
		        android:contentDescription="@string/select"/>
        	<ImageButton 
            	android:id="@+id/bt_win"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:src="@drawable/btn_win"
		        android:background="@null"
		        android:contentDescription="@string/win"/>
        	<ImageButton 
            	android:id="@+id/bt_play"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:src="@drawable/btn_play"
		        android:background="@null"
		        android:contentDescription="@string/play"/>
        	<ImageButton 
            	android:id="@+id/bt_stop"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:src="@drawable/btn_stop"
		        android:background="@null"
		        android:contentDescription="@string/stop"/>
        	<ImageButton 
            	android:id="@+id/bt_result"
            	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:src="@drawable/btn_result"
		        android:background="@null"
		        android:contentDescription="@string/result"/>        
 </LinearLayout>