<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="@drawable/bg_about"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dp"
        	android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
		        android:text="@string/app_name"
		        android:textColor="@color/NavajoWhite"
		        android:textSize="@dimen/text_size_medium"
		        android:layout_gravity="center"/>

            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
		        android:text="@string/about_copyright"
		        android:textColor="@color/NavajoWhite"
		        android:textSize="@dimen/text_size_medium"
		        android:layout_gravity="center"/>


            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
		        android:text="@string/about_email"
		        android:textColor="@color/NavajoWhite"
		        android:textSize="@dimen/text_size_medium"
		        android:layout_gravity="center"/>
        </LinearLayout>


             <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/bg_yn"
		        android:gravity="center">
		        <ImageButton 
		            android:id="@+id/bt_ok"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/btn_ok"
		            android:background="@null"/>
    		</LinearLayout>

    </LinearLayout>
